[feat] 인증 예외 Url 추가 #10 #11